# concordium-voting

./: .gitmodules  README.md
lib/govote-voting/: Cargo.toml
lib/govote-voting/src/: lib.rs
