[package]
name = "govote-voting"
version = "0.1.0"
authors = ["kosamit <kosamit@gmail.com>", "daratao <newsnow.bck@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# concordium-std = "*"
concordium-std = {path = "../../concordium-rust-smart-contracts/concordium-std"}

[features]
default = ["std"]
std = ["concordium-std/std"]

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = 3
panic = "abort"
